--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Hello Toad</string>
+    <string name="app_name">Hello Constraint</string>
     <string name="button_toast">Toast</string>
     <string name="button_count">Count</string>
     <string name="show_count">0</string>
